# Scalp

./: .gitignore  MATH_SPEC.md  demo.env  pyproject.toml
scalp/: channels.py  config.py  debug_log.py  main.py  schema.py
scalp/core/: hedge.py  portfolio.py  signal.py
scalp/exchange/: normalizer.py  okx_rest.py  okx_ws.py
scalp/execution/: order_manager.py  rate_limiter.py
scalp/models/: black76.py  har_rv.py  svi.py
scripts/: close.py
